<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">You Help</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="you_are_here">You are here</string>
    <string name="say_something">Tap to notify</string>
    <string name="send_caption">Notifications</string>
    <string name="hint">Hint</string>

    <string name="help_button_caption">Help</string>
    <string name="hello_button_caption">Hello</string>
    <string name="welcome_button_caption">Welcome</string>
    <string name="ping_button_caption">Ping</string>
    <string name="emergency_button_caption">SOS</string>
    
    <string name="refresh_button_caption">Refresh</string>
    <string name="sendmessage_button_caption">Send</string>
    <string name="next_register_button_caption">Next</string>
    <string name="register_1_title">Select Registration Method</string>
    
    <string name="radio_createnew">Create New User</string>
    <string name="radio_fbLogin">Sign with Facebook</string>
    
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    
    <string name="create_user_button_caption">Create</string>
    <string name="user_name_caption">User Name</string>
    <string name="user_password_caption">Password:</string>
    <string name="user_password_hint">Minimum est de 8 caractères. Seuls des caractères alphanumériques et de ponctuation</string>
    <string name="user_email_caption">E-Mail:</string>
     
    <string name="pref_send_report">Send crash reports</string>
    <string name="pref_send_report_summary">Helps to fix bugs</string>
    <string name="pref_map_apps">Maps Applications</string>
    <string name="pref_map_apps_summary">Select the maps application</string>
    <string name="pref_user_name">Set username</string>
    <string name="pref_user_name_summary">Set your username</string>
     
    <string name="pref_user_profile">User Profile</string>
    <string name="pref_update_setting">Update Settings</string>
    <string name="send_toast_service_url">http://youhelp.cloudapp.net/YouHelpService.svc/sendtoast</string>
    <string name="send_chatmessage_url">http://youhelp.cloudapp.net/YouHelpService.svc/sendchatmessage</string>
    <string name="app_id">531384416976939</string>
    
    <string name="chat_enter">Tap here to see the responses</string>
    
    <string name="pref_emergency_numbers">Emergecy Numbers</string>
    <string name="pref_emergency_numbers_summary">Set emergency phone numbers</string>
    <string name="pref_emergency_number1">Number 1</string>
    <string name="pref_emergency_number2">Number 2</string>
    <string name="pref_emergency_number3">Number 3</string>
    <string name="buttonDeleteAll">Delete All</string>
    <string name="buttonCallMe">Call Me</string>
    
</resources>