<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
 
    <PreferenceCategory android:title="@string/pref_user_profile" >
        <EditTextPreference
                android:title="@string/pref_user_name"
                android:summary="@string/pref_user_name_summary"
                android:key="prefUsername"/>
    </PreferenceCategory>
     
    <PreferenceCategory android:title="@string/pref_update_setting" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="prefSendReport"
            android:summary="@string/pref_send_report_summary"
            android:title="@string/pref_send_report" >
        </CheckBoxPreference>
 
        <ListPreference
            android:key="prefMapApps"
            android:entries="@array/mapsApplications"
            android:summary="@string/pref_map_apps_summary"
            android:entryValues="@array/mapsApplicationsValues"
            android:title="@string/pref_map_apps" />
    </PreferenceCategory>
 
</PreferenceScreen>