<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#123"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:baselineAligned="false"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/lblUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name_caption"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFF" />

        <EditText
            android:id="@+id/txtUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/lblPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_password_caption"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFF" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:ems="10"
            android:gravity="left"
            android:hint="@string/user_password_hint"
            android:inputType="textPassword"
            android:maxLines="1" />

        <TextView
            android:id="@+id/lblEMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_email_caption"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFF" />

        <EditText
            android:id="@+id/txtEMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10" />


    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:baselineAligned="false"
        android:orientation="vertical" >
    
	    <Button
	        android:id="@+id/btnCreateNewUser"
	        android:layout_width="wrap_content"
	        android:layout_height="42dip"
	        android:enabled="false"
	        android:background="@drawable/sendbuttonshape"
	        android:onClick="onCreateNewUser"
	        android:text="@string/create_user_button_caption" />
    
    </LinearLayout>

</LinearLayout>
